[package]
name = "wbf"
version = "0.1.0"
authors = ["Dylan Frankland <dfrankland@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.2.18"
tui = "0.6.2"
walkdir = "2.2.9"
regex = "1.2.0"
failure = "0.1.5"
number_prefix = "0.3.0"
termion = "1.5.3"
csv = "1.1.1"
